tests/paczka1/small_fuzzy/24179397.err
Error in line 10: gjRW S578 50,1
Error in line 12: gjRW A709 54,7
